Fixes text input stretching

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -16,6 +16,7 @@
 .participantsTable {
   width: 100%;
   border-collapse: collapse;
+  table-layout: fixed;
 }
 
 .participantsTable thead {
